tests/NormalTests/paczka1/fuzzy1/85076321.err
Error in line 13: wlnu A344 5,3
Error in line 18: wlnu S933 81,5
Error in line 20: TbtCr3N A73 127,3
Error in line 29: wlnu A73 32,4
Error in line 36: wlnu A344 3,4
